[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Hung-I <whygowe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mwclient = "^0.10.1"
pydantic-settings = "^2.1.0"
flask = "^3.0.0"


[tool.poetry.group.dev.dependencies]
pyink = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
